BUG#31056 Limited node restart in single user mode