storage/ndb/src/mgmclient/CommandInterpreter.cpp
@@ -1405,11 +1405,7 @@ CommandInterpreter::executeForAll(const char * cmd, ExecuteFunction fun,
     ndbout_c("Executing STOP on all nodes.");
     retval = (this->*fun)(nodeId, allAfterSecondToken, true);
   } else if(strcasecmp(cmd, "RESTART") == 0) {
-    ndbout_c("Executing RESTART on all nodes.");
-    ndbout_c("Starting shutdown. This may take a while. Please wait...");
     retval = (this->*fun)(nodeId, allAfterSecondToken, true);
-    ndbout_c("Trying to start all nodes of system.");
-    ndbout_c("Use ALL STATUS to see the system start-up phases.");
   } else if (strcasecmp(cmd, "STATUS") == 0) {
     (this->*fun)(nodeId, allAfterSecondToken, true);    
   } else {
@@ -2202,6 +2198,22 @@ CommandInterpreter::executeRestart(Vector<BaseString> &command_list,
   }
   NdbAutoPtr<char> ap1((char*)cl);
 
+  // We allow 'all restart' in single user mode
+  if(node_ids != 0) {
+    for (int i = 0; i<cl->no_of_nodes; i++) {
+      if((cl->node_states+i)->node_status == NDB_MGM_NODE_STATUS_SINGLEUSER)
+      {
+        ndbout_c("Cannot restart nodes: single user mode");
+        return -1;
+      }
+    }
+  }
+
+  if (node_ids == 0) {
+    ndbout_c("Executing RESTART on all nodes.");
+    ndbout_c("Starting shutdown. This may take a while. Please wait...");
+  }
+
   for (int i= 0; i < no_of_nodes; i++)
   {
     int j = 0;
@@ -2232,7 +2244,7 @@ CommandInterpreter::executeRestart(Vector<BaseString> &command_list,
   else
   {
     if (node_ids == 0)
-      ndbout_c("NDB Cluster is being restarted.");
+      ndbout_c("All DB nodes are being restarted.");
     else
     {
       ndbout << "Node";
